--- a/data/index.html
+++ b/data/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html><head>
     <script src="jquery-3.1.1.min.js"></script>
+    <script src="script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
   <body onload=init()>
-    <script src="script.js"></script>
-    <p>Select your network:</p>
-    <p id="networks-list"></p>
-    <select id="networks-dropdown" name="networks"></select>
-    <label>Network Name:</label><input id="network">
-    <label>Password:</label><input id="password" type="password">
+    <div id="macForm">
+      <p>Your SCAD CODE is:</p>
+      <p id="local-scad-code"></p>
 
-    <button id="save-button" type="button">Save</button> 
-</body>
+      <p>Remote SCAD CODE is:</p>
+      <input id="remote-scad-code">
+    </div>
+
+    <div id="localWifiForm">
+      <p>Select your network:</p>
+      <p id="networks-list"></p>
+      <select id="networks-dropdown" name="networks"></select>
+      <label>Network Name:</label><input id="network">
+      <label>Password:</label><input id="password" type="password">
+    </div>
+
+    <button id="save-button" type="submit">Save</button> 
+  </body>
 </html>
