fixed captive portal logic

--- a/data/index.html
+++ b/data/index.html
@@ -10,9 +10,15 @@
     <div id="macForm">
       <p>Your SCAD CODE is:</p>
       <p id="local-scad-code"></p>
+    </div>
 
+    <div id="remoteMacForm-input">
       <p>Remote SCAD CODE is:</p>
-      <input id="remote-scad-code">
+      <input id="remote-scad-code-input">
+    </div>
+    <div id="remoteMacForm">
+      <p>Remote SCAD CODE is:</p>
+      <p id ="remote-scad-code"></p>
     </div>
 
     <div id="localWifiForm">
