--- a/data/index.html
+++ b/data/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
-<html><head>
-    <script src="jquery-3.1.1.min.js"></script>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link href="bootstrap-4.4.1.min.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="bootstrap-4.4.1.min.js"></script>
     <script src="script.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
-  <body onload=init()>
-    <div id="macForm">
-      <p>Your SCAD CODE is:</p>
-      <p id="local-scad-code"></p>
-    </div>
+  <body onload=init() class="text-center">
+    <form class="yo-yo-form">
+      <img src="logo_yoyo.png" alt="" width="200" height="96">
+      <div class="lead" id="macForm">
+        <p>Your Yo-Yo Code is:</p>
+        <p id="local-scad-code">XXXXXXXXX</p>
+      </div>
+  
+      <div class="mb-4" id="remoteMacForm">
+        <input id="remote-scad-code-input" class="form-control" inputmode="numeric" pattern="[0-9 ]+" type="text" placeholder="Remote Yo-Yo Code">
+      </div>
+  
+      <div class="mb-4" id="localWifiForm">
+        <div class="input-group mb-3">
+          <input id="local_ssid" class="form-control" type="text" placeholder="Network Name" list="networks-list">
+          <datalist id=networks-list>
+            <select id=networks-list-select></select>
+          </datalist>
+        </div>
 
-    <div id="remoteMacForm-input">
-      <p>Remote SCAD CODE is:</p>
-      <input id="remote-scad-code-input" inputmode="numeric" pattern="[0-9]*" type="text">
-    </div>
-    <div id="remoteMacForm">
-      <p>Remote SCAD CODE is:</p>
-      <p id ="remote-scad-code" inputmode="numeric" pattern="[0-9]*" type="text"></p>
-    </div>
-
-    <div id="localWifiForm">
-      <p>Select your network:</p>
-      <p id="networks-list"></p>
-      <select id="networks-dropdown" name="networks"></select>
-      <label>Network Name:</label><input id="local_ssid">
-      <label>Password:</label><input id="local_pass" type="password">
-    </div>
-
-    <div id="remoteWifiForm">
-      <p>Optionally set remote network:</p>
-      <label>Network Name:</label><input id="remote_ssid">
-      <label>Password:</label><input id="remote_pass" type="password">
-    </div>
-
-    <button id="save-button" type="submit">Save</button> 
+        <input id="local_pass" class="form-control" placeholder="Password" type="password">
+      </div>
+  
+      <div class="mb-4" id="remoteWifiForm">
+        <p>Optionally set the remote network:</p>
+        <input id="remote_ssid" class="form-control" placeholder="Network Name">
+        <input id="remote_pass" class="form-control" placeholder="Password" type="password">
+      </div>
+  
+      <button class="btn btn-lg btn-primary btn-block" id="save-button" type="submit">Save</button>
+      <p class="mt-5 mb-3 text-muted">Interaction Research Studio 2020</p>
+    </form>
   </body>
 </html>
