Fixed typo that might be preventing Android devices displaying the network list

--- a/data/index.html
+++ b/data/index.html
@@ -31,8 +31,8 @@
         <div class="mb-4" id="localWifiForm">
           <div class="input-group mb-3">
             <input id="local_ssid" class="form-control" type="text" placeholder="Network Name" list="networks-list">
-            <datalist id=networks-list>
-              <select id=networks-list-select></select>
+            <datalist id="networks-list">
+              <select id="networks-list-select"></select>
             </datalist>
           </div>
 
