updates to captive portal layout

--- a/data/index.html
+++ b/data/index.html
@@ -20,12 +20,10 @@
       <img src="logo_yoyo.png" alt="" width="200" height="96">
       <div id="config">
         <div class="lead" id="macForm">
-          <p>Your Yo-Yo Code:</p>
-          <p id="local-scad-code">XXXX-XXXXX</p>
-          <p>Remote Yo-Yo Code:</p>
-          <p id ="remote-scad-code">XXXX-XXXXX</p>
+          <p> Your Yo-Yo Code:<br/><span id="local-scad-code">XXXX-XXXXX</span></p>
+          <p id="remote-scad-text">Remote Yo-Yo Code:<br/><span id="remote-scad-code"></span></p>
         </div>
-        
+
         <div class="mb-4" id="remoteMacForm">
           <input id="remote-scad-code-input" class="form-control" inputmode="numeric" pattern="[0-9 ]+" type="text" placeholder="Remote Yo-Yo Code">
         </div>
