add alert when submitting form

--- a/data/index.html
+++ b/data/index.html
@@ -17,6 +17,7 @@
   </head>
   <body onload=init() class="text-center">
     <div class="container">
+      <div class="alert" id="alert-text"></div>
       <form class="yo-yo-form">
         <img src="logo_yoyo.png" alt="" width="200" height="96">
         <div id="config">
