Fix select dialog height for Safari (MacOS capative portal)

--- a/data/index.html
+++ b/data/index.html
@@ -20,9 +20,9 @@
       <div class="alert" id="alert-text"></div>
       <form class="yo-yo-form">
         <img src="logo_yoyo.png" alt="" width="200" height="96">
-        <div id="config">
+        <div id="config"></div>
           <div class="lead" id="macForm">
-            <p> Your Yo-Yo Code:<br/><span id="local-scad-code">XXXX-XXXXX</span></p>
+            <p>Your Yo-Yo Code:<br/><span id="local-scad-code">XXXX-XXXXX</span></p>
             <p id="remote-scad-text">Remote Yo-Yo Code:<br/><span id="remote-scad-code"></span></p>
           </div>
 
@@ -33,7 +33,7 @@
           <div class="mb-4" id="localWifiForm">
             <div class="form-group mb-3">
               <select class="form-control" id="networks-list-select">
-                <option value="" disabled selected>Network Name</option>
+                <option value="" selected>Network Name</option>
               </select>
             </div>
             <input id="local_pass" class="form-control" placeholder="Password" type="password">
