Option should disabled in the js

--- a/data/index.html
+++ b/data/index.html
@@ -33,7 +33,7 @@
           <div class="mb-4" id="localWifiForm">
             <div class="form-group mb-3">
               <select class="form-control" id="networks-list-select">
-                <option value="" selected>Network Name</option>
+                <option value="" disabled selected>Network Name</option>
               </select>
             </div>
             <input id="local_pass" class="form-control" placeholder="Password" type="password">
