--- a/data/index.html
+++ b/data/index.html
@@ -20,7 +20,7 @@
       <div class="alert" id="alert-text"></div>
       <form class="yo-yo-form">
         <img src="logo_yoyo.png" alt="" width="200" height="96">
-        <div id="config"></div>
+        <div id="config">
           <div class="lead" id="macForm">
             <p>Your Yo-Yo Code:<br/><span id="local-scad-code">XXXX-XXXXX</span></p>
             <p id="remote-scad-text">Remote Yo-Yo Code:<br/><span id="remote-scad-code"></span></p>
