Added nextstep screen shown before reboot

--- a/data/index.html
+++ b/data/index.html
@@ -48,7 +48,11 @@
           <button class="btn btn-lg btn-primary btn-block" id="save-button" type="submit">Save</button>
         </div>
 
-        <div class="mb-4" id="result"></div>
+        <div class="mb-4" id="nextstep">
+          <p>Your ESP32S will shortly reboot.</p>
+          <p>The blue LED will blink 3 times if the network has been configured correctly.</p>
+          <p>If not, please reconnect to the network Yo-Yo-<span id="local-scad-code">XXXX-XXXXX</span> network and try again.</p>
+        </div>
         <p class="mt-5 mb-3 text-muted">Interaction Research Studio 2020</p>
       </form>
     </div>
